--- a/wp-content/themes/dorsWP/style.css
+++ b/wp-content/themes/dorsWP/style.css
@@ -438,6 +438,7 @@ input, textarea {
   width: 320px;
   height: 40px;
   padding: 10px;
+  margin-bottom: 15px;
 }
 .door-description form textarea {
   resize: vertical;
